# obj-tracker

./: .gitignore  Makefile  NOTICE.txt  README.md  pyproject.toml  requirements.txt  result.json  setup.py
src/objtracker/: __init__.py  cmdline.py  color_util.py  decorator.py  main.py  objtrace.py  objtracker.py  pob.py  tracer.py  utils.py
src/objtracker/modules/: objtracker.c  objtracker.h  utils.c  utils.h
