[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "objtracker"
authors = [{name = "Chiu Wai Ming", email = "anothersm@163.com"}]
description = "This is a traceable object that allows you to see the parameters passed more clearly when the object is called."
dependencies = ["objprint>0.1.3"]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/CLAY-zhao/obj-tracker"

[project.optional-dependencies]
full = []

[project.scripts]
objtrace = "objtracker:main"

[tool.setuptools.dynamic]
version = {attr = "objtracker.__version__"}
